--- a/menubar.css
+++ b/menubar.css
@@ -116,23 +116,7 @@
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
-.sidebar.open .bx-search:hover{
-  background: #1d1b31;
-  color: #FFF;
-}
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -297,7 +281,7 @@
 }
 
 .modal-content {
-  background-color: #3f2222;
+  background-color: #968989;
   margin: 5% auto;
   padding: 20px;
   height: 75vh;
