--- a/menubar.css
+++ b/menubar.css
@@ -302,10 +302,15 @@ margin-left: 17%;
 animation-name:modalopen;
 animation-duration:1s;
 box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-border-radius: 5px;
+border-radius: 10px;
 background: inherit;
 overflow: hidden;
+background-color: rgba(255, 255, 255, .15);   
+backdrop-filter: blur(5px);
 }  
+
+
+
 
 .close {
   color: #ccc;
@@ -327,3 +332,14 @@ overflow: hidden;
     opacity: 1;
   }
 }
+
+
+.loremipsum {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 1em;
+}
+
+
