--- a/menubar.css
+++ b/menubar.css
@@ -234,19 +234,7 @@
 }
 
 
-.video-container {
-    height: 100%;
-    width: 100%;
-    position: relative;
-}
 
-.video-container video {
-  width: 100%;
-  height: 100%
-  position: absolute;
-  object-fit: cover;
-  z-index: 0;
-}
 
 /* Just styling the content of the div, the *magic* in the previous rules */
 
@@ -279,7 +267,8 @@
   height: 100vh;
   width: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0,0.5);
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(20px);
 }
 
 .modal-content {
@@ -332,4 +321,27 @@ overflow: hidden;
   background-color: rgba(0, 0, 0,0.5);
   margin-left: 17%;
 
+}
+
+
+#videoBG {
+  position: fixed;
+  z-index: -1;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+}
+
+@media (min-aspect-ratio: 16/9) {
+  #videoBG {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  #videoBG {
+    width: auto;
+    height: 100%;
+  }
 }
